--- a/docs/packaging/10.manifest/index.mdx
+++ b/docs/packaging/10.manifest/index.mdx
@@ -77,7 +77,7 @@ ram.runtime = "1M"
 - `architectures` : `"all"` OR a list of supported archs using the `dpkg --print-architecture` nomenclature, i.e. among : `amd64` (= x86 64bit), `i386` (= x86 32bit), `armhf` (= ARM 32bit), `arm64` (= ARM 64bit)
 - `multi_instance` (`bool`) : wether or not the app supports being installed multiple time <small>(in which case, during installation, the actual app id is not just the `id` of the manifest, but something like `hellowold__2`, `helloworld__3`, etc. for subsequent installs)</small>
 - `ldap` (`bool` OR `"not_relevant"`) :  not to confused with the `sso` key : this corresponds to wether or not the app is configured to use YunoHost's LDAP DB as the user account DB. This should be set to `"not_relevant"` if and only if there is no notion of user account for this app (for example, Hextris). LDAP integration is often a prerequisite for the SSO to work. Setting it to `true` should mean that your app queries the Yunohost LDAP to retrieve accounts and/or groups, otherwise set it to either `false` or `"not_relevant"`.
-- `sso` (`bool` OR `"not_relevant"`): not to be confused with the `ldap` key. This corresponds to whether or not a user is *automatically authenticated* on the app when logged-in on the YunoHost portal. This should be set to `"not_relevant"` if and only if there is no notion of user account for this app (for example, Hextris). When set to `true`, this could cover different cases. For the apps which provision the user account information only from the HTTP header (and not from LDAP), you should set `sso = true` and `ldap = false`. When the app is only a web client related to an account (for instance [Element](https://github.com/YunoHost-Apps/element_ynh) or [Agendav](https://github.com/YunoHost-Apps/agendav_ynh)), in this case if the client support the SSO feature (when you have a button like SSO on login page) this should be set to `true`, even when it does not require any configuration to work with the SSO. When the server supports the SSO (like [Synapse](https://github.com/YunoHost-Apps/synapse_ynh)), consider setting `sso = true` for the client only, and `sso = "true"` for the server.
+- `sso` (`bool` OR `"not_relevant"`): not to be confused with the `ldap` key. This corresponds to whether or not a user is *automatically authenticated* on the app when logged-in on the YunoHost portal. This should be set to `"not_relevant"` if and only if there is no notion of user account for this app (for example, Hextris). When set to `true`, this could cover different cases. For the apps which provision the user account information only from the HTTP header (and not from LDAP), you should set `sso = true` and `ldap = false`. When the app is only a web client related to an account (for instance [Element](https://github.com/YunoHost-Apps/element_ynh) or [Agendav](https://github.com/YunoHost-Apps/agendav_ynh)), in this case if the client support the SSO feature (when you have a button like SSO on login page) this should be set to `true`, even when it does not require any configuration to work with the SSO. When the server supports the SSO (like [Synapse](https://github.com/YunoHost-Apps/synapse_ynh)), consider setting `sso = true` for both the client and the server.
 - `disk` (size) : an *estimate* minimum disk requirement. For example: 20M, 400M, 1G, ...
 - `ram.build` (size) : an *estimate* minimum ram requirement when building the app (this may be way different than `ram.runtime` because some apps have a peak 1~2G RAM when building sometimes...). For example: 50M, 400M, 1G, ...
 - `ram.runtime` (size) : an *estimate* minimum ram requirement when the app is active and running. For example: 50M, 400M, 1G, ...
