refacto: fix typos/grammar introduced previously

--- a/docs/admin/05.get_started/20.install_on/_configuration.mdx
+++ b/docs/admin/05.get_started/20.install_on/_configuration.mdx
@@ -63,8 +63,8 @@ You should be presented with 3 options (reviewed [in details here](/admin/domain
   You get multiple base domain choices:  `.nohost.me` / `.noho.st` / `.ynh.fr` for
   which you must specify the subdomain you want to use (e.g. `homersimpson.nohost.me`).
   
-  Provided that it's not already taken, the domain will be configured automatically and you won't need any further configuration step
-  (but as a downside you won't have full-control over its DNS configuration).
+  Provided that it's not already taken, the domain will be configured automatically and you won't need any further configuration steps
+  (but as a downside you won't have full control over its DNS configuration).
 
   [more details on YunoHost's free domains](/admin/domains/dns_nohost_me)
 
