--- a/docs/packaging/10.manifest/index.mdx
+++ b/docs/packaging/10.manifest/index.mdx
@@ -76,8 +76,8 @@ ram.runtime = "1M"
 - `helpers_version` (`str`) contains the version of the package helpers used by the application; supported versions are [2.0](/packaging/scripts/helpers_v2.0) and [2.1](/packaging/scripts/helpers_v2.1)
 - `architectures` : `"all"` OR a list of supported archs using the `dpkg --print-architecture` nomenclature, i.e. among : `amd64` (= x86 64bit), `i386` (= x86 32bit), `armhf` (= ARM 32bit), `arm64` (= ARM 64bit)
 - `multi_instance` (`bool`) : wether or not the app supports being installed multiple time <small>(in which case, during installation, the actual app id is not just the `id` of the manifest, but something like `hellowold__2`, `helloworld__3`, etc. for subsequent installs)</small>
-- `ldap` (`bool` OR `"not_relevant"`): see [LDAP and SSO section](#LDAP-and-SSO) for more details.
-- `sso` (multiple values supported): see [LDAP and SSO section](#LDAP-and-SSO) for more details.
+- `ldap` (`bool` OR `"not_relevant"`): see [LDAP and SSO section](#ldap-and-sso) for more details.
+- `sso` (multiple values supported): see [LDAP and SSO section](#ldap-and-sso) for more details.
 - `disk` (size) : an *estimate* minimum disk requirement. For example: 20M, 400M, 1G, ...
 - `ram.build` (size) : an *estimate* minimum ram requirement when building the app (this may be way different than `ram.runtime` because some apps have a peak 1~2G RAM when building sometimes...). For example: 50M, 400M, 1G, ...
 - `ram.runtime` (size) : an *estimate* minimum ram requirement when the app is active and running. For example: 50M, 400M, 1G, ...
